# greenbell

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  cmake_config.h.in  common.cmake  config.cmake.in
demos/: CMakeLists.txt  minimal.cpp
engine/: log.cpp  shader.cpp  thread_pool.cpp  window.cpp
engine/glad/: glad.c
include/: gb_fmt.h  gb_glm.h  gb_math.h  gl.h  gl_layout.h  log.h  overlay.h  sdl_exceptions.h  sdl_wrappers.h  shader.h  thread_pool.h  types.h  window.h
include/glad/: glad.h
tests/: CMakeLists.txt  basic.cpp
